--- a/Python/home.html
+++ b/Python/home.html
@@ -1,5 +1,12 @@
-<p style="text-align:center">testtest</p>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
 
-<p>test</p>
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
 
-<p style="text-align:right">test</p>
+</body>
+</html>
