--- a/Python/home.html
+++ b/Python/home.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-Hant">
 <head>
-<title>Page Title</title>
+<title>AAAAAAAAAAAAAA</title>
+<style>
+    body {background-color: powderblue;}
+    h1 {color: rgba(54, 54, 149, 0.95)}
+    p {color: red}
+</style>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>test</h1>
+<p>test2</p>
 
 </body>
 </html>
