html practice, algorithm practice

--- a/C_C++/HTML/index.html
+++ b/C_C++/HTML/index.html
@@ -4,6 +4,7 @@
         <title>Test page</title>
     </head>
     <body>
+        <!-- comment -->
         <h1>h1</h2>
         <h2>h2</h2>
         <h3>h3</h3>
@@ -33,9 +34,47 @@
         <p>
             <pre>preserve       white      space</pre>
         </p>
-
-        <img src="https://bit.ly/3rbgr2M" alt="Google" width="200" height="100">
-        <br/>
-        <img src="https://bit.ly/3rbgr2M" alt="Google" style="width: 100px; height: 200px">
+        <p>
+            <img src="https://bit.ly/3rbgr2M" alt="Google" width="200" height="100">
+            <br/>
+            <img src="https://bit.ly/3rbgr2M" alt="Google" style="width: 100px; height: 200px">
+        </p>
+        <p>
+            <a href="https://www.google.com/">this is Google</a>
+            <br/>
+            <a href="../HTML/testPage.html">Get Yellow</a>
+            <br/>
+            <a href="../HTML/testPage.html#Lorem ipsum2">Get Lorem ipsum</a>
+        </p>
+        <p>
+            <table border="5" cellpadding="10" cellspacing="10">
+                <tr>
+                    <th rowspan="7">Score</th>
+                </tr>
+                <tr>
+                    <th colspan="2">Scoreboard</th>
+                </tr>
+                <tr>
+                    <th>Name</th>
+                    <th>Score</th>
+                </tr>
+                <tr>
+                    <td>Mike</td>
+                    <td>80</td>
+                </tr>
+                <tr>
+                    <td>Make</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>Muke</td>
+                    <td>92</td>
+                </tr>
+                <tr>
+                    <td>Meke</td>
+                    <td>81</td>
+                </tr>
+            </table>
+        </p>
     </body>
 <html>
