--- a/C_C++/HTML/index.html
+++ b/C_C++/HTML/index.html
@@ -47,7 +47,8 @@
             <a href="../HTML/testPage.html#Lorem ipsum2">Get Lorem ipsum</a>
         </p>
         <p>
-            <table border="5" cellpadding="10" cellspacing="10">
+            <table border="5" cellpadding="10" cellspacing="10" width="80%">
+                <caption>Name and Score</caption>
                 <tr>
                     <th rowspan="7">Score</th>
                 </tr>
