HTML CSS practice

--- a/C_C++/HTML_CSS/testPage.html
+++ b/C_C++/HTML_CSS/testPage.html
@@ -8,7 +8,7 @@
             Yellow
         </p>
         <p>
-            <a href="../HTML/index.html">Go Back</a>
+            <a href="../HTML_CSS/index.html">Go Back</a>
         </p>
         <p>
             <a href="#Lorem ipsum1">Quick Link1</a>
