--- a/HTML_CSS/index_with_CSS.html
+++ b/HTML_CSS/index_with_CSS.html
@@ -23,211 +23,77 @@
             a:visited {
                 color: black
             }
-            h1 {
-                color: red;
+            .text1 {
+                color: rgb(0, 0, 200);
                 background-color: rgb(0, 255, 255);
-                letter-spacing: 10px;
+                border-style: dotted;
+                border-top-style: solid;
+            }
+            .text2 {
+                color: red;
+                letter-spacing: 4px;
                 word-spacing: 30px;
                 line-height: 2;
+                border-style: solid;
+                border-width: 5px;
+                border-left-color: brown;
             }
-            h2 {
-                color: rgb(0, 0, 200);
-            } 
-            h3 {
+            .text3 {
+                color: #00ff00;
+                border-style: dashed;
+                border-color: darkorange;
+            }
+            .text4 {
                 text-align: center;
+                border-style: inset;
             }
-            h4 {
+            .text5 {
                 text-align: right;
+                border-style: outset;
+            }
+            .text6 {
+                text-align: justify;
+                border: 5px solid blueviolet;
             }
             p {
-                color: #00ff00;
                 font-family: Georgia, Verdana, Serif;
                 font-style: italic;
                 font-size: 20px;
                 font-weight: lighter; /* 字體粗細 */
-                text-align: justify;
             }
         </style>
     </head>
     <body>
-        <!-- comment -->
-        <h1>This is h1</h2>
-        <h2>h2</h2>
-        <h3>h3</h3>
-        <h4>h4</h4>
-        <h5>h5</h5>
-        <h6>h6</h6>
-        <hr/>
-        Text Text Text Text Text Text 
-        <p>
-            Vivamus quis facilisis nisl, viverra venenatis magna. 
-            In sed ipsum tempor, faucibus dolor eget, malesuada nibh. 
-            Vestibulum finibus dictum tortor, sit amet placerat risus. 
-            Etiam id arcu neque. 
-            Donec pulvinar commodo nibh, eget vulputate lacus faucibus ac. 
-            Integer risus justo, fermentum at eleifend vitae, ornare quis mauris. 
-            In auctor quam id augue pulvinar rhoncus. 
-            Praesent blandit tortor vitae magna dictum dapibus. 
-            Nunc et blandit enim.
-        </p>
-        <!--image-->
-        <img src="https://bit.ly/3rbgr2M" alt="Google" width="200" height="100">
-        <br/>
-        <img src="https://bit.ly/3rbgr2M" alt="Google" style="width: 100px; height: 200px">
-        <br/>
-        <!--hypertext-->
-        <a href="https://www.google.com/">this is Google</a>
-        <br/>
         <a href="../HTML_CSS/testPage.html">Get Yellow</a>
-        <br/>
-        <a href="../HTML_CSS/testPage.html#Lorem ipsum2">Get Yellow Lorem ipsum</a>
-        <!--table-->
-        <table border="5" cellpadding="10" cellspacing="10" width="80%">
-            <caption>this is a table</caption>
-            <tr>
-                <th rowspan="7">Score</th>
-            </tr>
-            <tr>
-                <th colspan="2">Scoreboard</th>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <th>Score</th>
-            </tr>
-            <tr>
-                <td>Mike</td>
-                <td>80</td>
-            </tr>
-            <tr>
-                <td>Make</td>
-                <td>100</td>
-            </tr>
-            <tr>
-                <td>Muke</td>
-                <td>92</td>
-            </tr>
-            <tr>
-                <td>Meke</td>
-                <td>81</td>
-            </tr>
-        </table>
-        <!--Lists-->
-        <table border="2">
-            <!--unorderd list-->
-            <tr>
-                <td>
-                    <ul>
-                        <li>Point 1</li>
-                        <li>Point 2</li>
-                    </ul>
-                </td>
-                <td>
-                    <ul type="circle">
-                        <li>Point 1</li>
-                        <li>Point 2</li>
-                    </ul>
-                </td>
-                <td>
-                    <ul type="square">
-                        <li>Point 1</li>
-                        <li>Point 2</li>
-                    </ul>
-                </td>
-                <td>
-                    <ul type="none">
-                        <li>Point 1</li>
-                        <li>Point 2</li>
-                    </ul>
-                </td>
-            </tr>
-            <!--orderd list-->
-            <tr>
-                <td>
-                    <ol>
-                        <li>First</li>
-                        <li>Second</li>
-                        <li>Third</li>
-                    </ol>
-                </td>
-                <td>
-                    <ol type="a">
-                        <li>First</li>
-                        <li>Second</li>
-                        <li>Third</li>
-                    </ol>
-                </td>
-                <td>
-                    <ol type="A">
-                        <li>First</li>
-                        <li>Second</li>
-                        <li>Third</li>
-                    </ol>
-                </td>
-                <td>
-                    <ol type="I">
-                        <li>First</li>
-                        <li>Second</li>
-                        <li>Third</li>
-                    </ol>
-                </td>
-                <td>
-                    <ol type="i">
-                        <li>First</li>
-                        <li>Second</li>
-                        <li>Third</li>
-                    </ol>
-                </td>
-            </tr>
-        </table>
-        <ul>
-            <li>Sandwich</li>
-            <ol>
-                <li>yummmy</li>
-                <li>healthy</li>
-                <li>fresh</li>
-            </ol>
-            <li>Hamburger</li>
-            <ol>
-                <li>fat</li>
-                <li>greasy</li>
-                <li>too salty</li>
-            </ol>
-        </ul>
-        <!--definition lists-->
-        <dt>Sandwich</dt>
-        <dd>Yummy</dd>
-        <dt>Hamburger</dt>
-        <dd>fat</dd>
-        <!--iframe-->
-        <iframe src="testPage.html" width="400px" height="200px"></iframe>
-        <br/>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/jNQXAC9IVRw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <!--form-->
-        <form>
-            Username: <input type="text" name="username" size="3" maxlength="5"/>
-            <br/>
-            Password: <input type="password" name="password"/>
-            <br/>
-            Gender: 
-                <input type="radio" name="gender" value="male" checked/>Male
-                <input type="radio" name="gender" value="female"/>Female
-            <br/>
-            Courses:
-                <input type="checkbox" name="options" value="HTML" checked/>HTML
-                <input type="checkbox" name="options" value="CSS"/>CSS
-            <br/>
-            Age Group: 
-                <select name="age">
-                    <option>10-20</option>
-                    <option>21-30</option>
-                    <option>31-40</option>
-                </select>
-            <br/>
-            Comment: <textarea name="comment" rows="7" cols="40"></textarea>
-            <br/>
-            <input type="submit" value="Submit"/>
-            <input type="reset" value="Reset"/>
-            <input type="button" value="Click Me!!"/>
-        </form>
+        <p class="text1">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam diam ipsum, volutpat sed mauris vel, rutrum vehicula tortor. Proin sed. 
+        </p>
+        <p class="text2">
+            Donec eget malesuada ante. Ut tempus turpis blandit, eleifend nulla et, interdum arcu. Sed vitae dictum eros. Vestibulum in massa. 
+        </p>
+        <p class="text3">
+            Sed sed augue elit. Etiam vulputate odio dolor, at blandit elit ornare nec. Donec non leo tortor. Nulla gravida arcu. 
+        </p>
+        <p class="text4">
+            Vestibulum risus tortor, tristique non ligula nec, imperdiet maximus lorem. Sed vulputate, velit in pretium sollicitudin, nisl orci porta nisi. 
+        </p>
+        <p class="text5">
+            Phasellus sollicitudin nunc dapibus tortor consequat tincidunt. Curabitur malesuada feugiat rhoncus. Duis vehicula, ipsum eget cursus tincidunt, lorem mauris laoreet. 
+        </p>
+        <p class="text6">
+            Mauris dignissim diam vitae fermentum ullamcorper. Etiam fermentum, mi eu luctus feugiat, lectus sapien eleifend tortor, in sagittis ante tortor. 
+        </p>
+        <p class="text7">
+            Etiam fermentum, ex eu porttitor dignissim, felis metus commodo dolor, eu dictum neque velit quis turpis. Pellentesque faucibus metus placerat. 
+        </p>
+        <p class="text8">
+            Ut tincidunt mattis tellus ac convallis. Nunc congue pharetra est, ut semper massa porta nec. Donec massa ligula, ultricies eu. 
+        </p>
+        <p class="text9">
+            Sed bibendum ante quis erat bibendum, ac luctus augue aliquam. Donec enim arcu, porta sed massa non, posuere ultrices elit. 
+        </p>
+        <p class="text10">
+            Integer non diam id turpis auctor pretium. Nam et sollicitudin eros. Fusce aliquam nunc in urna placerat scelerisque. Proin et. 
+        </p>
     </body>
 <html>
