--- a/HTML_CSS/index_with_CSS.html
+++ b/HTML_CSS/index_with_CSS.html
@@ -11,6 +11,11 @@
                 background-attachment: fixed;
                 background-size: 250px;
             }
+            a {
+                position: fixed;
+                text-align: left;
+                left: 500px;
+            }
             a:link {
                 color: red;
             }
@@ -23,13 +28,26 @@
             a:visited {
                 color: black
             }
-            .text1 {
+            table {
+                border: 2px solid;
+            }
+            tr {
+                background-color: orange;
+            }
+            th {
+                color: white;
+            }
+            td {
+                color: purple;
+                border: solid 3px green
+            }
+            #text1 {
                 color: rgb(0, 0, 200);
                 background-color: rgb(0, 255, 255);
                 border-style: dotted;
                 border-top-style: solid;
             }
-            .text2 {
+            #text2 {
                 color: red;
                 letter-spacing: 4px;
                 word-spacing: 30px;
@@ -38,20 +56,20 @@
                 border-width: 5px;
                 border-left-color: brown;
             }
-            .text3 {
+            #text3 {
                 color: #00ff00;
                 border-style: dashed;
                 border-color: darkorange;
             }
-            .text4 {
+            #text4 {
                 text-align: center;
                 border-style: inset;
             }
-            .text5 {
+            #text5 {
                 text-align: right;
                 border-style: outset;
             }
-            .text6 {
+            #text6 {
                 text-align: justify;
                 border: 5px solid blueviolet;
             }
@@ -61,39 +79,117 @@
                 font-size: 20px;
                 font-weight: lighter; /* 字體粗細 */
             }
+            span {
+                font-size: 36px;
+                color: darkmagenta ;
+            }
+            .groupText {
+                color: darkgoldenrod;
+            }
+            div p {
+                font-size: 30px;
+            }
+            body > table tr {
+                background-color: lightgreen;
+                position: relative;
+            }
+            .table1 {
+                position: relative;
+                left: 60px;
+            }
+            .table2 {
+                position: absolute;
+                top: 120px;
+                left: 380px;
+            }
+            .table2 tr {
+                background-color: lightskyblue;
+            }
+            .tables {
+                margin-top: 5px;
+                padding: 20px;
+                border: solid;
+            }
         </style>
     </head>
     <body>
         <a href="../HTML_CSS/testPage.html">Get Yellow</a>
-        <p class="text1">
+        <table>
+            <caption>I'm not in div.</caption>
+            <tr>
+                <th>Column1</th>
+                <th>Column2</th>
+                <th>Column3</th>
+            </tr>
+            <tr>
+                <td>Data1</td>
+                <td>Data2</td>
+                <td>Data3</td>
+            </tr>
+        </table>
+        <div class="tables">
+            <div class="table1">
+                <table>
+                    <caption>I'm not in div.</caption>
+                    <tr>
+                        <th>Column1</th>
+                        <th>Column2</th>
+                        <th>Column3</th>
+                    </tr>
+                    <tr>
+                        <td>Data1</td>
+                        <td>Data2</td>
+                        <td>Data3</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="table2">
+                <table>
+                    <caption>I'm not in div.</caption>
+                    <tr>
+                        <th>Column1</th>
+                        <th>Column2</th>
+                        <th>Column3</th>
+                    </tr>
+                    <tr>
+                        <td>Data1</td>
+                        <td>Data2</td>
+                        <td>Data3</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <p id="text1">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam diam ipsum, volutpat sed mauris vel, rutrum vehicula tortor. Proin sed. 
         </p>
-        <p class="text2">
+        <p id="text2">
             Donec eget malesuada ante. Ut tempus turpis blandit, eleifend nulla et, interdum arcu. Sed vitae dictum eros. Vestibulum in massa. 
         </p>
-        <p class="text3">
+        <p id="text3">
             Sed sed augue elit. Etiam vulputate odio dolor, at blandit elit ornare nec. Donec non leo tortor. Nulla gravida arcu. 
         </p>
-        <p class="text4">
-            Vestibulum risus tortor, tristique non ligula nec, imperdiet maximus lorem. Sed vulputate, velit in pretium sollicitudin, nisl orci porta nisi. 
+        <p id="text4">
+            Vestibulum <span>tortor, tristique non</span> ligula nec, imperdiet maximus lorem. Sed vulputate, velit in pretium sollicitudin, nisl orci porta nisi. 
         </p>
-        <p class="text5">
+        <p id="text5">
             Phasellus sollicitudin nunc dapibus tortor consequat tincidunt. Curabitur malesuada feugiat rhoncus. Duis vehicula, ipsum eget cursus tincidunt, lorem mauris laoreet. 
         </p>
-        <p class="text6">
+        <p id="text6">
             Mauris dignissim diam vitae fermentum ullamcorper. Etiam fermentum, mi eu luctus feugiat, lectus sapien eleifend tortor, in sagittis ante tortor. 
         </p>
-        <p class="text7">
-            Etiam fermentum, ex eu porttitor dignissim, felis metus commodo dolor, eu dictum neque velit quis turpis. Pellentesque faucibus metus placerat. 
-        </p>
-        <p class="text8">
-            Ut tincidunt mattis tellus ac convallis. Nunc congue pharetra est, ut semper massa porta nec. Donec massa ligula, ultricies eu. 
-        </p>
-        <p class="text9">
-            Sed bibendum ante quis erat bibendum, ac luctus augue aliquam. Donec enim arcu, porta sed massa non, posuere ultrices elit. 
-        </p>
-        <p class="text10">
-            Integer non diam id turpis auctor pretium. Nam et sollicitudin eros. Fusce aliquam nunc in urna placerat scelerisque. Proin et. 
-        </p>
+        <div class="groupText">
+            <p id="text7">
+                Etiam fermentum, ex eu porttitor dignissim, felis metus commodo dolor, eu dictum neque velit quis turpis. Pellentesque faucibus metus placerat. 
+            </p>
+            <p id="text8">
+                Ut tincidunt mattis tellus ac convallis. Nunc congue pharetra est, ut semper massa porta nec. Donec massa ligula, ultricies eu. 
+            </p>
+            <p id="text9">
+                Sed bibendum ante quis erat bibendum, ac luctus augue aliquam. Donec enim arcu, porta sed massa non, posuere ultrices elit. 
+            </p>
+            <p id="text10">
+                Integer non diam id turpis auctor pretium. Nam et sollicitudin eros. Fusce aliquam nunc in urna placerat scelerisque. Proin et. 
+            </p>
+        </div>
     </body>
 <html>
