--- a/HTML_CSS/index_with_CSS.html
+++ b/HTML_CSS/index_with_CSS.html
@@ -46,10 +46,14 @@
             .text4 {
                 text-align: center;
                 border-style: inset;
+                padding: 30px;
+                padding-bottom: 0px;
             }
             .text5 {
                 text-align: right;
                 border-style: outset;
+                margin: 100px;
+                margin-top: 0px;
             }
             .text6 {
                 text-align: justify;
